# pattern-lisp

./: .cursorrules  .gitignore  README.md  TODO.md  cabal.project  pattern-lisp.cabal
.cursor/rules/: gram-validation.mdc  specify-rules.mdc
.specify/memory/: constitution.md  no-backwards-compatibility.md
app/: Main.hs
docs/: gram-hs-reference.md  maps-and-sets-notation-proposal.md  nested-env-scopes.md  nested-scope-serialization-proposal.md  pattern-lisp-effect-system.md  pattern-lisp-syntax-conventions.md  pattern-state-integration-todo.md  pattern-state-lisp-design.md  plisp-serialization-design-review-todos.md  plisp-serialization-design.md
examples/: README.md  arithmetic.plisp  conditionals.plisp  factorial.plisp  functions.plisp  keywords-maps-sets.plisp  lists.plisp  pattern-basics.plisp  pattern-predicates.plisp  scoping.plisp
specs/001-pattern-lisp-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pattern-lisp-init/checklists/: requirements.md
specs/001-pattern-lisp-init/contracts/: README.md
specs/002-core-lisp-evaluator/: data-model.md  performance-notes.md  plan.md  quickstart.md  research.md  spec.md  success-criteria-verification.md  tasks.md
specs/002-core-lisp-evaluator/checklists/: requirements.md
specs/002-core-lisp-evaluator/contracts/: README.md
specs/003-pattern-state-functions/: data-model.md  gram-as-ir-plan.md  plan.md  quickstart.md  research.md  spec.md  state-initialization-proposal.md  tasks.md
specs/003-pattern-state-functions/checklists/: requirements.md
specs/003-pattern-state-functions/contracts/: README.md
specs/004-implementation-consistency-review/: data-model.md  findings-phase2-3.md  findings-phase4.md  findings-phase5.md  inventory-summary.md  phase7-verification.md  plan.md  quickstart.md  research.md  review-tracking.md  spec.md  summary-report.md  tasks.md
specs/004-implementation-consistency-review/checklists/: requirements.md
specs/004-implementation-consistency-review/contracts/: README.md
specs/005-keywords-maps-sets/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-keywords-maps-sets/checklists/: requirements.md
specs/005-keywords-maps-sets/contracts/: README.md
src/Lisp/: Eval.hs  Parser.hs  Primitives.hs  Syntax.hs  Test.hs
src/PatternLisp/: Codec.hs  Eval.hs  FileLoader.hs  Gram.hs  Parser.hs  PatternPrimitives.hs  Primitives.hs  Runtime.hs  Subject.hs  Syntax.hs  Test.hs
test/: ExamplesSpec.hs  IntegrationSpec.hs  Properties.hs  REPLSpec.hs  Spec.hs
test/Lisp/: EvalSpec.hs  ParserSpec.hs  PrimitivesSpec.hs
test/PatternLisp/: CodecSpec.hs  EvalSpec.hs  GramSerializationSpec.hs  GramSpec.hs  ParserSpec.hs  PatternSpec.hs  PrimitivesSpec.hs  RuntimeSpec.hs  SubjectSpec.hs
